# kompello

./: .env  .gitignore  README.md  config.json  manage.py  package-lock.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
kompello-web/: package-lock.json  package.json  react-router.config.ts  vite.config.ts
kompello-web/app/: app.css  i18n.ts  root.tsx  routes.ts
kompello-web/app/components/: actionButton.tsx  appLayout.tsx  authContext.tsx  customFieldsSection.tsx  dataTable.tsx  privateRoute.tsx  providers.tsx  titleContext.tsx  userSelectDialog.tsx  userSelectInput.tsx
kompello-web/app/locales/: de.json  en.json
kompello-web/app/routes/: pageNotFound.tsx
kompello-web/openapi/: kompello.yaml
kompello/app/: asgi.py  config.py  settings.py  urls.py  wsgi.py
kompello/core/: permissions.py  urls.py
kompello/core/migrations/: 0001_initial.py  0002_company.py  0003_customfielddefinition_customfieldinstance.py  0004_address_alter_customfieldinstance_value_customer.py  0005_currency_unit_item.py  0006_customfielddefinition_is_archived_and_more.py
kompello/core/models/: __init__.py  auth_models.py  base_models.py  billing_models.py  company_models.py  custom_field_models.py  customer_models.py
kompello/core/serializers/: base_serializers.py  billing_serializers.py  company_serializers.py  currency_serializers.py  custom_field_serializers.py  customer_serializers.py  item_serializers.py  unit_serializers.py  user_serializers.py
kompello/core/tests/: helper.py  (+8 more)
kompello/templates/: base_view.html  react_view.html
(+207 files in other folders)
